--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,12 @@
 
   {%- include head.html -%}
 
-  <body>
+  <body class="bg-primary bg-texture">
 
     {%- include header.html -%}
 
-    <main class="page-content wrapper" aria-label="Content">
-      <section class="mt-2 mb-2"> 
+    <main class="page-content wrapper flex" aria-label="Content">
+      <section class="mt-2 mb-2" id="main-content"> 
 
         {{ content }}
 
