--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-/*@import "{{ site.theme }}";*/
+@import "{{ site.theme }}";
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
