Reconfigured Column Styling

--- a/_includes/column_author.html
+++ b/_includes/column_author.html
@@ -1,4 +1,4 @@
-<aside id="author">
+<aside id="author" class="aside-column">
 	<h3 class="mb-1">Author</h3>
 	<a class="site-logo" rel="author" href="{{ "/" | relative_url }}"><img class="author-image" src="{{"/assets/images/author.png" | absolute_url }}" /></a>
 
