--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -77,7 +77,7 @@ main {
     max-width: 650px;
 }
 
-#author { 
+.aside-column { 
 	flex: 1;
 	margin: 1em 0 3em 0;
 	flex-direction: column;
@@ -85,7 +85,7 @@ main {
 }
 
 @media only screen and (min-width: 768px) {
-	#author { max-width: 180px; }
+	.aside-column { max-width: 180px; }
 }
 
 footer {
@@ -249,7 +249,10 @@ section#banner {
 
 /* post list page */
 .post-image { 
-width: 100%; }
+	width: 100%; 
+	height: 40vh;
+	object-fit: cover;
+}
 
 .social-icons svg { 
 	fill: hsl(335, 40%, 83%); width: 35px; margin-right: 1vw;}
@@ -355,6 +358,11 @@ body {
 }
 
 
+.tag {
+	font-weight: 100;
+	opacity:0.2;
+	font-size: 0.8em;
+}
 /* INDEX PAGE  */
 
 #posts-list { display: flex; flex-direction: column; }
@@ -379,8 +387,13 @@ body {
 { font-size: 1.3em; }
 
 .more {
-	font-size: 1.5em;
+	font-size: 0.8em !important;
+	align-self: end;
 }
+
+.more:after { 
+	content: "-->";
+ }
 
 /* Glyph, by Harry Roberts */
 
@@ -390,6 +403,19 @@ hr.glyph {
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
+
+
+
+/* POST PAGE */
+
+#post-page-title { line-height: 1em; }
+#post-page-meta {}
+#post-page-featured-image {}
+#post-page-location {}
+#post-page-body p { margin-bottom: 1em;  }
+#post-page-body em { background-color: hsl(335, 40%, 83%); }
+#post-page-footer {}
+
 
 
 /* MAILCHIMP CSS - CUSTOMISED */
