Add post page layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
         {{ content }}
 
       </section>
-          {%- include author_column.html -%}
+          {%- include column_author.html -%}
     </main>
 
 
