--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -19,7 +19,7 @@
 </ul>
 
       </section>
-          {%- include author_column.html -%}
+          {%- include column_author.html -%}
     </main>
 
 
