--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
      
       <!-- <a id="site-title" class="no-decoration" rel="author" href="{{ "/" | relative_url }}"><h1 class="text-brown">Mocha The Week</h1></a> -->
 
-      <img src="{{"/assets/images/mocha-banner-clean.png" | absolute_url }}" srcset="{{"/assets/images/mocha-banner-ghosts.png" | absolute_url }} 800w, {{"/assets/images/mocha-banner-clean.png" | absolute_url }} 200w" sizes="100vw" alt="mocha the week banner logo, chibi marianne with text" id="header-banner" />
+      <a id="site-title" class="no-decoration" rel="author" href="{{ "/" | relative_url }}"><img src="{{"/assets/images/mocha-banner-clean.png" | absolute_url }}" srcset="{{"/assets/images/mocha-banner-ghosts.png" | absolute_url }} 800w, {{"/assets/images/mocha-banner-clean.png" | absolute_url }} 200w" sizes="100vw" alt="mocha the week banner logo, chibi marianne with text" id="header-banner" /></a>
 
       <!-- <img src="{{"/assets/images/mocha-banner-desktop.png" | absolute_url }}" /> -->
       <!-- <img src="{{"/assets/images/mocha-banner-clean.png" | absolute_url }}" /> -->
@@ -15,7 +15,7 @@
 <!-- </section> -->
 <nav class="bg-blue">
       <ul class="text-white">
-        <li>Home</li>
+        <li>{%- include link.html url="/" text="Home" -%}</li>
         <li>About</li>
         <li>Latest</li>
         <li>Best</li>
