--- a/_includes/link.html
+++ b/_includes/link.html
@@ -1,1 +1,1 @@
-<a href="{{include.url}}" class="{{"no-decoration " | append: include.classes }}" >{{include.text}}</a>
+<a href="{{include.url | relative_url }}" class="{{"no-decoration " | append: include.classes }}" >{{include.text}}</a>
