--- a/_includes/summary-post.html
+++ b/_includes/summary-post.html
@@ -3,15 +3,15 @@
       {% if include.post.tags %}
         {% for tag in include.post.tags %}
          <p class="tag text-grey">{{ tag }} </p>
-         {%- if forloop.last != true -%}<p class="ml-1 mr-1 text-grey"> | </p>{% endif %}
+         {%- if forloop.last != true -%}<p class="ml-1 mr-1 tag text-grey"> | </p>{% endif %}
         {% endfor %}
       {% endif %}
     </div>
-      <a href="{{ include.post.url }}" class="no-decoration text-primary mb-1"><h3 class="text-primary">{{ include.post.title }}</h3></a>
+      <a href="{{ include.post.url | relative_url }}" class="no-decoration text-primary mb-1"><h3 class="text-primary">{{ include.post.title }}</h3></a>
       <div role="doc-subtitle" class="mb-1"><a href="{{ include.post.gmap }}" class="no-decoration text-primary">{{ include.post.location}}</a></div>
       <img class="post-image mb-1" src="{{ include.post.image }}" />
       
-      <p class="mb-1">{{ include.post | truncate: 200 }}</p>
+      <p class="mb-1">{{ include.excerpt }}</p>
 
       <p class="more mt-2 mb-2">read more</p>
       {%- if include.post.last != false -%}
