--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,14 +8,18 @@
     {%- include header.html -%}
 
     <main class="page-content wrapper flex" aria-label="Content">
-      <section class="mt-2 mb-2" id="main-content"> 
+      <section class="mt-2 mb-2 mr-2" id="main-content"> 
 
-        {{ content }}
+        <h1 id="post-page-title">{{ page.title }}</h1>
+        <p id="post-page-meta">Published: {{ page.date | date: "%-d %B %Y" }}</p>
+        <img src="{{ page.image }}" />
+        <p id="post-page-location"><a href="{{ page.gmap | absolute_url }}" >{{ page.location }}</a></p>
+        <section id="post-page-body" >{{ page.content }}</section>
+        <section id="post-page-footer" ><p>tags: {% for tag in page.tags %}{{tag | append: " "}}{% endfor %}</p></section>
 
       </section>
-          {%- include author_column.html -%}
+       {%- include column_post-page.html -%}
     </main>
-
 
     {%- include footer.html -%}
 
